--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,17 @@ generate_matrix:
     paths:
       - .gitlab-ci.generated.yml
     expire_in: 1 hour
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /\[skip ci\]/
+      when: never
+    - changes:
+        - "README.md"
+        - "ADD_APP.md"
+        - "result_server/templates/*.html"
+        - ".kiro/**/*"
+        - ".vscode/**/*"
+      when: never
+    - when: always
 
 trigger_child_pipeline:
   stage: trigger
