Fix GitHub Actions sync to always run even with [skip ci]

--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -4,10 +4,14 @@ on:
   push:
     branches:
       - '**'   # 全ブランチを対象にする
+  # [skip ci] があっても同期は実行する
+  workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+    # [skip ci] があっても同期は常に実行
+    if: always()
     steps:
       - uses: actions/checkout@v3
         with:
