--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    # [skip ci] があっても同期は常に実行
-    if: always()
+    # 同期は [skip ci] に関係なく常に実行
+    if: "!contains(github.event.head_commit.message, '[skip sync]')"
     steps:
       - uses: actions/checkout@v3
         with:
