--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,33 @@ variables:
   code: ""
   system: ""
 
+# Extract system and code filters from API variables or commit message
+.filters: &filters
+  - |
+    # Priority 1: API trigger variables (from curl -F "variables[system]=...")
+    if [[ -n "$system" ]]; then
+      echo "System filter from API variable: $system"
+    elif [[ "$CI_COMMIT_MESSAGE" =~ \[system:([^\]]+)\] ]]; then
+      export system="${BASH_REMATCH[1]}"
+      echo "System filter from commit message: $system"
+    else
+      echo "No system filter detected, running all systems"
+    fi
+  - |
+    # Priority 1: API trigger variables (from curl -F "variables[code]=...")
+    if [[ -n "$code" ]]; then
+      echo "Code filter from API variable: $code"
+    elif [[ "$CI_COMMIT_MESSAGE" =~ \[code:([^\]]+)\] ]]; then
+      export code="${BASH_REMATCH[1]}"
+      echo "Code filter from commit message: $code"
+    else
+      echo "No code filter detected, running all programs"
+    fi
+
 generate_matrix:
   stage: generate
+  before_script:
+    *filters
   script:
     - bash ./scripts/matrix_generate.sh code=$code system=$system
   tags:
