Add BenchPark monitor functionality [benchpark]
- Add BenchPark monitoring system for external benchmark integration
- Use system-existing BenchPark installations (Fugaku, QC-GH200)
- Independent CI pipeline with conditional execution
- Complete documentation and development rules
- Kiro steering files for Japanese language and YAML generation rules

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # GitLab CI-generated file
 .gitlab-ci.generated.yml
+.gitlab-ci.benchpark.yml
 
 # Received results directory
 result_server/received/
@@ -7,6 +8,12 @@ result_server/received/
 # Python bytecode cache
 result_server/routes/__pycache__/
 result_server/utils/__pycache__/
+
+# BenchPark repository (external reference)
+benchpark/
+
+# BenchPark workspace (generated during CI)
+benchpark-workspace/
 
 # editor backup files and caches
 *~
