Fix YAML syntax and enable parallel execution [park-only]
- Fix YAML generation syntax errors in benchpark_matrix_generate.sh
- Move BenchPark jobs to same stages as BenchKit (generate/trigger)
- Enable parallel execution: BenchKit and BenchPark run simultaneously
- No need to wait for BenchKit completion

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,6 @@
 stages:
   - generate
   - trigger
-  - benchpark_generate
-  - benchpark_trigger
 
 variables:
   code: ""
@@ -127,7 +125,7 @@ trigger_child_pipeline:
     - when: always
 # BenchPark Monitor Jobs
 generate_benchpark_matrix:
-  stage: benchpark_generate
+  stage: generate
   script:
     - bash ./scripts/benchpark_matrix_generate.sh system=$system
   tags:
@@ -153,7 +151,7 @@ generate_benchpark_matrix:
     - when: never
 
 trigger_benchpark_pipeline:
-  stage: benchpark_trigger
+  stage: trigger
   trigger:
     include:
       - artifact: .gitlab-ci.benchpark.yml
